Set sass colour varioables

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,3 +1,11 @@
+// Colours
+$color-default: #fff;
+$color-secondary: #666e72;
+$color-display: #1f282d;
+$color-numbers: #f16b67;
+$color-operator: #f3ac74;
+$color-reset: #e42e4a;
+
 body {
   background: peachpuff;
 }
