Set font from google font and sass font variables

--- a/src/style.scss
+++ b/src/style.scss
@@ -6,6 +6,11 @@ $color-numbers: #f16b67;
 $color-operator: #f3ac74;
 $color-reset: #e42e4a;
 
+// Fonts
+$font-family-default: 'Roboto', sans-serif;
+$font-size-default: 32px;
+
+
 body {
   background: peachpuff;
 }
