--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -65,4 +65,11 @@ body {
       }              
     }
   }
+  .notes {
+    max-width: 600px;
+    margin: 0 auto;
+    font-size: 16px;
+    font-weight: 300;
+    color: #000;
+  }
 }
