Minor css update - added 1px padding to save button

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -58,7 +58,7 @@ body {
         background: $color-reset;        
       }
       .save {     
-           
+        padding: 16px 26px;
         input {
           border: 0;
           background: 0;
